# discord-tts-bot

./: .gitignore  Cargo.toml
src/: main.rs
src/backends/: dectalk.rs  mod.rs
