[package]
name = "discord-tts-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-futures = "0.2.5"
rustls = { version = "0.23.37", features = ["ring"] }

[dependencies.tokio]
version = "1.50.0"
features = ["rt-multi-thread"]

[dependencies.serenity]
default-features = false
features = ["voice", "framework", "standard_framework", "cache", "rustls_backend"]
version = "0.12"

[dependencies.songbird]
git = "https://github.com/beerpsi-forks/songbird"
branch = "davey"
version = "0.5"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.5"
features = ["aac", "mp3", "isomp4", "alac"]
